--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,13 @@
 :root {
   --background-color: #f5f5f5;
+  --background-color-footer: #2f303a;
   --title-text-color: #212121;
-  --text-color: #757575;
+  --text-main-color: #757575;
+  --text-color: #ffffff;
+  --logo-text-color: #000000;
   --accent-color: #2196f3;
+  --background-color-about: #f5f4fa;
+  --color-adress-tel: rgba(255, 255, 255, 0.6);
 }
 
 .header {
@@ -12,10 +17,11 @@
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
   font-family: 'Roboto', sans-serif;
-  color: #757575;
-  color: #212121;
+  color: var(--title-text-color);
+  background-color: var(--background-color);
+  font-size: 14px;
+  letter-spacing: 00.03em;
 }
 
 .hero {
@@ -38,9 +44,6 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
-
-
 
 .title-hero {
   color: #ffffff;
@@ -132,9 +135,12 @@ body {
 
 .logo-studio {
   color: #212121;
-
-
 }
+
+footer .logo-studio {
+  color: var(--text-color);
+}
+
 .nav-link .link {
   color: #212121;
   font-weight: 500;
@@ -150,7 +156,7 @@ body {
 }
 
 .current {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .adress {
@@ -160,10 +166,16 @@ body {
   font-size: 14px;
   line-height: 24px;
   /* or 171% */
-
   letter-spacing: 0.03em;
+  color: #ffffff;
+}
 
+.contact-link .adress:hover {
+  color: var(--accent-color);
+}
 
+.contact-link .adress:focus {
+  color: var(--accent-color);
 }
 
 .tel {
@@ -175,8 +187,6 @@ body {
   /* identical to box height, or 171% */
 
   letter-spacing: 0.03em;
-
-
 }
 
 .mailto {
@@ -188,37 +198,66 @@ body {
   /* or 171% */
 
   letter-spacing: 0.03em;
-
-
 }
 
 /* ------КНОПКИ------ */
 
 .button {
   cursor: pointer;
-
-
 }
 .button .site-button:hover {
-  color: #ffffff;
-  background-color: #2196f3;
+  width: 73px;
+  height: 38px;
+  left: 512px;
+  top: 174px;
+  color: var(--text-color);
+  background: #2196f3;
+  /* shadow-middle */
+
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
+
+.button .site-button:focus {
+  width: 73px;
+  height: 38px;
+  left: 512px;
+  top: 174px;
+  color: var(--text-color);
+  background: #2196f3;
+  /* shadow-middle */
+
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
 .hero .button-hero:hover {
-  color: #ffffff;
-  background-color: #2196f3;
+  color: var(--title-text-color) background-color #2196f3;
 }
 .hero .button-hero:focus {
-  color: #ffffff;
-  background-color: #2196f3;
+  color: var(--title-text-color) background-color #2196f3;
 }
 .button-hero {
   cursor: pointer;
-  background: #2196f3;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+  background-color: var(--accent-color);
+  color: var(--text-color);
 }
 .site-button {
   cursor: pointer;
+  width: 68px;
+  height: 26px;
+  left: 748px;
+  top: 180px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  /* identical to box height, or 162% */
+
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 .footer {
@@ -235,6 +274,4 @@ body {
 }
 .line {
   list-style-type: none;
-
-
 }
