--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,36 @@
+html {
+  box-sizing: border-box;
+}
+
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+ .container {
+  width: 1200px;
+  height: 80px;
+padding-left: 15px;
+padding-right: 15px;
+margin: 0 auto;
+
+ }
+
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 :root {
-  --background-color: #f5f5f5;
+  --background-color: #ffffff;
   --background-color-footer: #2f303a;
   --title-text-color: #212121;
   --text-main-color: #757575;
@@ -10,7 +41,7 @@
   --color-adress-tel: rgba(255, 255, 255, 0.6);
 }
 
-.header {
+header {
   background-color: #ffffff;
   width: 1600px;
   height: 80px;
@@ -69,11 +100,23 @@ body {
   line-height: 16px;
 }
 .subtitle-project {
-  color: #212121;
+
+font-family: 'Roboto';
+  font-style: normal;
   font-weight: 700;
   font-size: 18px;
   line-height: 36px;
+  /* identical to box height, or 200% */
+
+  letter-spacing: 0.06em;
+  color: var(--title-text-color);
 }
+
+.about {
+
+  background-color: var(--background-color-about);
+}
+
 
 .subtitle-about {
   color: #212121;
@@ -85,7 +128,7 @@ body {
   color: #757575;
   font-weight: 400;
   font-size: 16px;
-  line-height: 30px;
+  line-height: 30px 60px;
 }
 
 .special .text {
@@ -94,7 +137,7 @@ body {
   font-size: 14px;
   line-height: 24px;
 }
-.about .text {
+.avatar .text {
   color: #757575;
   font-weight: 400;
   font-size: 16px;
@@ -107,7 +150,16 @@ body {
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
-}
+
+ }
+
+ .contact-link {
+  margin-left: auto;
+ }
+
+
+
+
 .contact-link .link:hover {
   color: #2196f3;
 }
@@ -141,12 +193,29 @@ footer .logo-studio {
   color: var(--text-color);
 }
 
+.nav-link .site-nav {
+  display: flex;
+}
+
+.site-nav .item {
+  margin-right: 50px;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  
+}
+
 .nav-link .link {
+
+display: block;
+padding-top: 32px;
+padding-bottom: 32px;
+
   color: #212121;
   font-weight: 500;
   font-size: 14px;
   line-height: 16px;
 }
+
 .nav-link .link:hover {
   color: #2196f3;
 }
@@ -206,10 +275,7 @@ footer .logo-studio {
   cursor: pointer;
 }
 .button .site-button:hover {
-  width: 73px;
-  height: 38px;
-  left: 512px;
-  top: 174px;
+  
   color: var(--text-color);
   background: #2196f3;
   /* shadow-middle */
@@ -240,28 +306,40 @@ footer .logo-studio {
   color: var(--title-text-color) background-color #2196f3;
 }
 .button-hero {
+
   cursor: pointer;
-  background-color: var(--accent-color);
-  color: var(--text-color);
+    background-color: var(--accent-color);
+    color: var(--text-color);
+  
+    font-family: 'Roboto';
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    /* identical to box height, or 188% */
+  
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
 }
+
 .site-button {
-  cursor: pointer;
-  width: 68px;
-  height: 26px;
-  left: 748px;
-  top: 180px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 26px;
-  /* identical to box height, or 162% */
 
-  text-align: center;
-  letter-spacing: 0.03em;
+  cursor: pointer;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    /* identical to box height, or 162% */
+  
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--title-text-color);
+    background-color: var(--background-color-about);
 }
 
-.footer {
-  background-color: 2F303A;
+footer {
+  background-color: var(--background-color-footer);
   width: 1600;
   height: 252;
 }
